# mpv-handler

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  README.zh-Hans.md  README.zh-Hant.md  README.zh-TW.md  play-with-mpv-handler.js
.github/: dependabot.yml
.github/workflows/: build.yml
linux/: mpv-handler  mpv-handler.desktop
share/: config.toml  mpv-handler.toml  proto.html
share/examples/: streamlink.toml  you-get-bilibili.toml  you-get.toml  youtube-dl.toml
share/linux/: config.toml  mpv-handler-debug.desktop  mpv-handler.desktop
share/macos/: Info.plist
share/macos/mpv-handler.app/Contents/: Info.plist
share/macos/mpv-handler.app/Contents/MacOS/: mpv-handler
share/macos/mpv-handler.app/Contents/Resources/: AppSettings.plist  script
share/macos/mpv-handler.app/Contents/Resources/MainMenu.nib/: designable.nib
share/macos/mpv-handler.app/Contents/Resources/MainMenu.nib/MainMenu.nib/: keyedobjects.nib
share/windows/: config.toml  handler-install.bat  handler-uninstall.bat
src/: config.rs  error.rs  handler.rs  main.rs  protocol.rs
src/plugins/: mod.rs  pipe.rs  play.rs  stream.rs
userscript/: play-with-mpv-handler.js
windows/: handler-uninstall.bat  mpv-handler.bat
