[package]
name = "mpv-handler"
version = "0.2.3"
edition = "2018"
authors = ["Akatsuki Rui <akiirui@outlook.com>"]
description = "Play website videos and songs with mpv & youtube-dl"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/akiirui/mpv-handler"
repository = "https://github.com/akiirui/mpv-handler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"

[profile.release]
lto = true
