[package]
name = "mpv-handler"
version = "0.3.13"
edition = "2021"
authors = ["Akatsuki Rui <akiirui@outlook.com>"]
description = "Play website videos and songs with mpv & yt-dlp"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/akiirui/mpv-handler"
repository = "https://github.com/akiirui/mpv-handler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"

[features]
console = []
